--- a/src/pages/[category]/index.astro
+++ b/src/pages/[category]/index.astro
@@ -15,10 +15,9 @@ if (!category) {
 ---
 
 <CategoryShell category={category} tools={tools}>
-  <div class="mb-8 prose prose-gray dark:prose-invert max-w-none">
+  <div class="mb-8 max-w-none text-gray-700 dark:text-gray-300">
     <p class="text-lg leading-relaxed">
       {category.description} Explore our collection of {tools.length} tools designed to help you work more efficiently.
     </p>
   </div>
 </CategoryShell>
-
