--- a/src/pages/[category]/index.astro
+++ b/src/pages/[category]/index.astro
@@ -14,10 +14,4 @@ if (!category) {
 }
 ---
 
-<CategoryShell category={category} tools={tools}>
-  <div class="mb-8 max-w-none text-gray-700 dark:text-gray-300">
-    <p class="text-lg leading-relaxed">
-      {category.description} Explore our collection of {tools.length} tools designed to help you work more efficiently.
-    </p>
-  </div>
-</CategoryShell>
+<CategoryShell category={category} tools={tools} />
